test/terror.txt
name:0001
source:
procedure p1(6)

error:
C:\Program Files (x86)\Phix\test\t00.exw:1
procedure p1(6)
             ^ ')' expected

name:0002
source:
procedure p2() 6

error:
C:\Program Files\Phix\test\t00.exw:1
procedure p2() 6
               ^ "end" expected

name:0003
source:
for =

error:
C:\Program Files\Phix\test\t00.exw:1
for =
    ^ a loop variable name is expected here

name:0004
source:
for 6 to 10 do

error:
C:\Program Files\Phix\test\t00.exw:1
for 6 to 10 do
    ^ a loop variable name is expected here

name:0005
source:
integer 6

error:
C:\Program Files\Phix\test\t00.exw:1
integer 6
        ^ a name is expected here

name:0006
source:
procedure 6

error:
C:\Program Files\Phix\test\t00.exw:1
procedure 6
          ^ a name is expected here

name:0007
source:
procedure ()

error:
C:\Program Files\Phix\test\t00.exw:1
procedure ()
          ^ a name is expected here

name:0008
source:
procedure p3(thing )

error:
C:\Program Files (x86)\Phix\test\t00.exw:1
procedure p3(thing )
             ^ a type is expected here

name:0009
source:
if abort(0) then

error:
C:\Program Files\Phix\test\t00.exw:1
if abort(0) then
   ^ a procedure name is not expected here

name:0010
source:
procedure p4(g)

error:
C:\Program Files\Phix\test\t00.exw:1
procedure p4(g)
             ^ a type is expected here

name:0011
source:
integer i2 i2=i2[1]

error:
C:\Program Files\Phix\test\t00.exw:1
integer i2 i2=i2[1]
                 ^ type error (attempt to subscript an atom)

name:0012
source:
integer i3 i3[1]=9

error:
C:\Program Files\Phix\test\t00.exw:1
integer i3 i3[1]=9
             ^ attempt to subscript an atom (assigning to it)

name:0013
source:
string s7 s7[1][1]='b'

error:
C:\Program Files\Phix\test\t00.exw:1
string s7 s7[1][1]='b'
               ^ attempt to subscript an atom (char of string)

name:0014
source:
with profile with profile_time

error:
C:\Program Files\Phix\test\t00.exw:1
with profile with profile_time
                  ^ cannot mix profile and profile_time

name:0015
source:
sequence ObjectType
        ObjectType = {1,2,"3"}
global integer TC
if ObjectType[TC]=2 then end if

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:4
variable TC has not been assigned a value

Global & Local Variables

 C:\Program Files (x86)\Phix\test\t00.exw:
    ObjectType = {1,2,"3"}
    TC = <novalue>

name:0015c
source:
sequence ObjectType
        ObjectType = {1,2,"3"}
global integer TC
if ObjectType[TC]=2 then end if

error:
C:\Program Files\Phix\test\t00.exw:4
variable TC has not been assigned a value
[etc]

name:0016
source:
banana

error:
C:\Program Files\Phix\test\t00.exw:1
banana
^ undefined identifier banana

name:0016a
source:
object banana =
error:
C:\Program Files (x86)\Phix\test\t00.exw:1
object banana =
              ^ syntax error - an expression is expected here

name:0017
source:
fred4

error:
C:\Program Files\Phix\test\t00.exw:1
fred4
^ undefined identifier fred4

name:0020
source:
q(1,2,3) -- compilation error expected [previously invoked as a procedure]
function q(integer i, j, k=5)
    return i+i+j+k
end function

error:
C:\Program Files\Phix\test\t00.exw:2
function q(integer i, j, k=5)
         ^ previously declared/invoked as a procedure

name:0021
source:
if q() then end if
function q(integer i, j, k=5)
    return i+i+j+k
end function

error:
C:\Program Files (x86)\Phix\test\t00.exw:1
if q() then end if
   ^ missing parameters

name:0022
source:
if q(1) then end if
function q(integer i, j, k=5)
    return i+i+j+k
end function

error:
C:\Program Files\Phix\test\t00.exw:1
if q(1) then end if
   ^ missing non-defaulted parameter [j]

name:0023
source:
if q(1,2,3,4) then end if -- compilation error expected (got)
function q(integer i, j, k=5)
    return i+i+j+k
end function

error:
C:\Program Files\Phix\test\t00.exw:1
if q(1,2,3,4) then end if -- compilation error expected (got)
           ^ too many parameters

name:0024
source:
function q(integer i, j, k=5)
    return i+i+j+k
end function
if q(i:=1)!=14 then ?9/0 end if  -- compilation error expected (got)

error:
C:\Program Files\Phix\test\t00.exw:4
if q(i:=1)!=14 then ?9/0 end if  -- compilation error expected (got)
         ^ missing parameters

name:0025
source:
function q(integer i, j, k=5)
    return i+i+j+k
end function
if q(j:=7)!=14 then ?9/0 end if  -- compilation error expected (got)

error:
C:\Program Files\Phix\test\t00.exw:4
if q(j:=7)!=14 then ?9/0 end if  -- compilation error expected (got)
         ^ missing parameters

name:0026
source:
function q(integer i, j, k=5)
    return i+i+j+k
end function
if q(k:=5)!=14 then ?9/0 end if  -- compilation error expected (got)

error:
C:\Program Files\Phix\test\t00.exw:4
if q(k:=5)!=14 then ?9/0 end if  -- compilation error expected (got)
         ^ missing parameters

name:0027
source:
function q(integer i, j, k=5)
    return i+i+j+k
end function
if q(i:=1,k:=5)!=14 then ?9/0 end if    -- compilation error expected (got)

error:
C:\Program Files\Phix\test\t00.exw:4
if q(i:=1,k:=5)!=14 then ?9/0 end if    -- compilation error expected (got)
              ^ missing parameters

name:0028
source:
function q(integer i, j, k=5)
    return i+i+j+k
end function
if q(j:=7,k:=5)!=14 then ?9/0 end if    -- compilation error expected (got)

error:
C:\Program Files\Phix\test\t00.exw:4
if q(j:=7,k:=5)!=14 then ?9/0 end if    -- compilation error expected (got)
              ^ missing parameters

name:0029
source:
function q(integer i, j, k=5)
    return i+i+j+k
end function
if q() then end if  -- compilation error expected (got)

error:
C:\Program Files\Phix\test\t00.exw:4
if q() then end if  -- compilation error expected (got)
     ^ missing parameters

name:0030
source:
function q(integer i, j, k=5)
    return i+i+j+k
end function
if q(k:=5,i:=1)!=14 then ?9/0 end if    -- compilation error expected (got)

error:
C:\Program Files\Phix\test\t00.exw:4
if q(k:=5,i:=1)!=14 then ?9/0 end if    -- compilation error expected (got)
              ^ missing parameters

name:0031
source:
function q(integer i, j, k=5)
    return i+i+j+k
end function
if q(k:=5,j:=7)!=14 then ?9/0 end if    -- compilation error expected (got)

error:
C:\Program Files\Phix\test\t00.exw:4
if q(k:=5,j:=7)!=14 then ?9/0 end if    -- compilation error expected (got)
              ^ missing parameters

name:0032
source:
--*/ oops

error:
C:\Program Files\Phix\test\t00.exw:1
--*/ oops
^ unexpected end block comment

name:0033
source:
--/* oops

error:
C:\Program Files\Phix\test\t00.exw:1
--/* oops
   ^ missing closing block comment

name:0034
source:
integer i i=1/0

error:
C:\Program Files (x86)\Phix\test\t00.exw:1
attempt to divide by 0

Global & Local Variables
[etc]
name:0035
source:
    if not equal(0) then ?9/0 end if

error:
C:\Program Files\Phix\test\t00.exw:1
    if not equal(0) then ?9/0 end if
                  ^ missing parameters

name:0036
source:
sequence x = {}

error:
C:\Program Files (x86)\Phix\test\t00.exw:1
sequence x = {}
         ^  is not used.

name:dcfunc01
source:
--DEV better messsage (for now just tests that the error is reported on line 4, rather than ~in pcfuncN.e)
sequence s
procedure p()
    ?define_c_func(1,s,{},0)
end procedure
s = "fred"
s[3] = "thing"
p()

error:
C:\Program Files (x86)\Phix\test\t00.exw:4 in procedure p()
define_c_func/proc parameter error
... called from C:\Program Files (x86)\Phix\test\t00.exw:8

Global & Local Variables
[etc]
name:opFind01
source:
object a
function f()
object b
b = {1}
  return find(a,b)
end function
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable a has not been assigned a value
    b = {1}
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
[etc]

name:opFind02
source:
without warning
object a
function f()
object b
  return find(a,b)
end function
a = {1}
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <novalue>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opFind03
source:
object a
function f()
object b
b = {1}
  return find(b,a)
end function
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable a has not been assigned a value
    b = {1}
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
[etc]

name:opFind04
source:
without warning
object a
function f()
object b
  return find(b,a)
end function
a = {1}
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <novalue>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opFlush01
source:
flush(0)
error:
C:\Program Files (x86)\Phix\test\t00.exw:1
wrong file mode for attempted operation

Global & Local Variables
[etc]
name:opFor01
source:
atom r
sequence s
atom step
    s = "fred"
    if s[2]='r' then -- (compiler NOT smart enough to know this is always true)
                  -- (if it ever does get that smart, find something tougher for this test!)
        step = 0.1
    else
        step = 1
    end if
for i=0 to 1 by step do
    r = i
end for

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:11
for loop error, step is 0.1
Global & Local Variables
 C:\Program Files (x86)\Phix\test\t00.exw:
    r = <novalue>
    s = "fred"
    step = 0.1
    i = 0

name:opFor01c
source:
atom r
sequence s
atom step
    s = "fred"
    if s[2]='r' then -- (compiler NOT smart enough to know this is always true)
                  -- (if it ever does get that smart, find something tougher for this test!)
        step = 0.1
    else
        step = 1
    end if
for i=0 to 1 by step do
    r = i
end for

error[C]:
C:\Program Files\Phix\test\t00.exw:11
for loop error, step is 0.1
[etc]

name:opFor02
source:
atom r
procedure p()
sequence s
atom step
    s = "fred"
    if s[2]='r' then -- (compiler NOT smart enough to know this is always true)
                  -- (if it ever does get that smart, find something tougher for this test!)
        step = 0.1
    else
        step = 1
    end if
for i=0 to 1 by step do
    r = i
end for
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:12 in procedure p()
for loop error, step is 0.1
    s = "fred"
    step = 0.1
    i = 0
... called from C:\Program Files\Phix\test\t00.exw:16
[etc]

name:opFor03
source:
sequence s
integer j,k,l
    s="this"
    if s[2]='h' then    -- (compiler NOT smart enough to realise this always true)
--        j=3
        k=2
        l=-1
    else
        j=1
        k=2
        l=1
    end if
    for i=j to k by l do
        s="that"
    end for

error:
C:\Program Files\Phix\test\t00.exw:13
variable j has not been assigned a value
[etc]

name:opFor03p
source:
sequence s
procedure p()
integer j,k,l
    s="this"
    if s[2]='h' then    -- (compiler NOT smart enough to realise this always true)
--        j=3
        k=2
        l=-1
    else
        j=1
        k=2
        l=1
    end if
    for i=j to k by l do
        s="that"
    end for
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:14 in procedure p()
variable j has not been assigned a value
    j = <novalue>
    k = 2
    l = -1
    i = <novalue>
... called from C:\Program Files\Phix\test\t00.exw:18
[etc]

name:opFor04
source:
sequence s
integer j,k,l
    s="this"
    if s[2]='h' then    -- (compiler NOT smart enough to realise this always true)
        j=3
--        k=2
        l=-1
    else
        j=1
        k=2
        l=1
    end if
    for i=j to k by l do
        s="that"
    end for

error:
C:\Program Files\Phix\test\t00.exw:13
variable k has not been assigned a value
[etc]

name:opFor04p
source:
sequence s
procedure p()
integer j,k,l
    s="this"
    if s[2]='h' then    -- (compiler NOT smart enough to realise this always true)
        j=3
--        k=2
        l=-1
    else
        j=1
        k=2
        l=1
    end if
    for i=j to k by l do
        s="that"
    end for
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:14 in procedure p()
variable k has not been assigned a value
    j = 3
    k = <novalue>
    l = -1
    i = <novalue>
... called from C:\Program Files\Phix\test\t00.exw:18
[etc]

name:opFor05
source:
sequence s
integer j,k,l
    s="this"
    if s[2]='h' then    -- (compiler NOT smart enough to realise this always true)
        j=3
        k=2
--        l=-1
    else
        j=1
        k=2
        l=1
    end if
    for i=j to k by l do
        s="that"
    end for

error:
C:\Program Files\Phix\test\t00.exw:13
variable l has not been assigned a value
[etc]

name:opFor05p
source:
sequence s
procedure p()
integer j,k,l
    s="this"
    if s[2]='h' then    -- (compiler NOT smart enough to realise this always true)
        j=3
        k=2
--        l=-1
    else
        j=1
        k=2
        l=1
    end if
    for i=j to k by l do
        s="that"
    end for
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:14 in procedure p()
variable l has not been assigned a value
    j = 3
    k = 2
    l = <novalue>
    i = <novalue>
... called from C:\Program Files\Phix\test\t00.exw:18
[etc]

name:opFor06
source:
sequence s
integer j,k,l
    s="this"
    if s[2]='h' then    -- (compiler NOT smart enough to realise this always true)
        j=3
        k=2
        l=-1
        l=0
    else
        j=1
        k=2
        l=1
    end if
    for i=j to k by l do
        s="that"
    end for

error:
C:\Program Files\Phix\test\t00.exw:14
for loop error, step is 0
[etc]

name:opFor06p
source:
sequence s
procedure p()
integer j,k,l
    s="this"
    if s[2]='h' then    -- (compiler NOT smart enough to realise this always true)
        j=3
        k=2
        l=-1
        l=0
    else
        j=1
        k=2
        l=1
    end if
    for i=j to k by l do
        s="that"
    end for
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:15 in procedure p()
for loop error, step is 0
    j = 3
    k = 2
    l = 0
    i = 3
... called from C:\Program Files\Phix\test\t00.exw:19
[etc]

name:opFrst
source:
function f(object o) return o end function
object n
procedure p()
object o
    n = f(o)
--    o = 1
    o = f(o)
end procedure
p()     

error:
C:\Program Files\Phix\test\t00.exw:5 in procedure p()
variable o has not been assigned a value
    o = <no value>
... called from C:\Program Files\Phix\test\t00.exw:9
[etc]

name:opJcc01
source:
without warning
object a
function f()
object b
  if a<b then return 1 else return 0 end if
end function
a = 1
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opJcc02
source:
without warning
object a
function f()
object b
  if b<a then return 1 else return 0 end if
end function
a = 1
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opJccE01
source:
without warning
object a
function f()
object b
  if a=b then return 1 else return 0 end if
end function
a = 1
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opJccE02
source:
without warning
object a
function f()
object b
  if b=a then return 1 else return 0 end if
end function
a = 1
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opJif01
source:
without warning
procedure p()
object o
    if o then puts(1,"o is true") end if
end procedure
p()

error:
C:\Program Files (x86)\Phix\test\t00.exw:4 in procedure p()
variable o has not been assigned a value
    o = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:6
[etc]

name:opJnotx01
source:
without warning
object a
function f()
object b
    if b[a] then return 1 else return 0 end if
end function
a = {1}
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opJnotx02
source:
object a
function f()
object b
b = 1.4
    if b[a] then return 1 else return 0 end if
end function
a = {1}
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
attempt to subscript an atom
    b = 1.4
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opJnotx03
source:
object a
function f()
object b
b = {1,2,3}
    if b[a] then return 1 else return 0 end if
end function
a = {1}
a = f()

error[C]:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
subscript is not an atom
    b = {1,2,3}
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opJnotx04
source:
object a
function f()
object b
b = {1,2,3}
    if b[a] then return 1 else return 0 end if
end function
a = {1}
a = f()

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
subscript is not an atom
    b = {1,2,3}
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
Global & Local Variables
 C:\Program Files (x86)\Phix\test\t00.exw:
    a = {1}

name:opLen01
source:
object a
function f()
    return length(a)
end function
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:3 in function f()
variable a has not been assigned a value
... called from C:\Program Files (x86)\Phix\test\t00.exw:5
[etc]

name:opLen01a
source:
without warning
object a
function f()
object b
    return length(b)
end function
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
[etc]

name:opLen02
source:
object a
function f()
    return length(a)
end function
a = 1
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:3 in function f()
length of an atom is not defined
... called from C:\Program Files (x86)\Phix\test\t00.exw:6
[etc]

name:opLen02a
source:
object a
function f()
object b
b = 1
    return length(b)
end function
a = f()

error[C]:
C:\Program Files (x86)\Phix\test\t00.exw:5
    return length(b)
                  ^ incompatible type for routine signature

name:opLen02b
source:
object a
function f()
object b
b = 1
    return length(b)
end function
a = f()

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:5
    return length(b)
                  ^ incompatible type for routine signature

name:opLen03
source:
object a
function f()
--object b
    return length(a)
end function
a = 1.5
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:4 in function f()
length of an atom is not defined
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
[etc]

name:opLen03a
source:
object a
function f()
object b
b = 1.5
    return length(b)
end function
a = f()

error[C]:
C:\Program Files (x86)\Phix\test\t00.exw:5
    return length(b)
                  ^ incompatible type for routine signature

name:opLen03b
source:
-- note: localtypes (pltype.e) is not used when interpreting
--       (for performance reasons)
--       which is why this differs from the compiled result
object a
function f()
object b
b = 1.5
    return length(b)
end function
a = f()

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:8
    return length(b)
                  ^ incompatible type for routine signature

name:opMatch01
source:
object a
function f()
object b
b = {1}
  return match(a,b)
end function
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable a has not been assigned a value
    b = {1}
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
[etc]

name:opMatch02
source:
without warning
object a
function f()
object b
  return find(a,b)
end function
a = {1}
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opMatch03
source:
object a
function f()
object b
b = {1}
  return find(b,a)
end function
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable a has not been assigned a value
    b = {1}
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
[etc]

name:opMatch04
source:
without warning
object a
function f()
object b
  return find(b,a)
end function
a = {1}
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opMath01
source:
integer i

procedure seti(atom a, atom b)
    i = a-b
end procedure
seti(0,1)
seti(37864793,4294967295.1)

error:
C:\Program Files (x86)\Phix\test\t00.exw:4 in procedure seti()
type check failure, i is -4257102502.0
    a = 37864793
    b = 4294967295.0
... called from C:\Program Files (x86)\Phix\test\t00.exw:7

Global & Local Variables
[etc]
name:opMemSet01
source:
integer addr,val,len
--    addr = allocate(10)
    val = 0
    len = 10
    mem_set(addr,val,len)
    addr = 0

error:
C:\Program Files\Phix\test\t00.exw:5
variable addr has not been assigned a value
[etc]

name:opMemSet02
source:
integer addr,val,len
    addr = allocate(10)
--    val = 0
    len = 10
    mem_set(addr,val,len)
    val = 0

error:
C:\Program Files\Phix\test\t00.exw:5
variable val has not been assigned a value
[etc]

name:opMemSet03
source:
integer addr,val,len
    addr = allocate(10)
    val = 0
--    len = 10
    mem_set(addr,val,len)
    len = 0

error:
C:\Program Files\Phix\test\t00.exw:5
variable len has not been assigned a value
[etc]

name:opMemSet04
source:
procedure p()
integer addr,val,len
--    addr = allocate(10)
    val = 0
    len = 10
    mem_set(addr,val,len)
    addr = 0
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:6 in procedure p()
variable addr has not been assigned a value
    addr = <no value>
    val = 0
    len = 10
... called from C:\Program Files\Phix\test\t00.exw:9
[etc]

name:opMemSet05
source:
procedure p()
integer addr,val,len
    addr = allocate(10)
--    val = 0
    len = 10
    mem_set(addr,val,len)
    val = 0
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:6 in procedure p()
variable val has not been assigned a value
[etc]

name:opMemSet06
source:
procedure p()
integer addr,val,len
    addr = allocate(10)
    val = 0
--    len = 10
    mem_set(addr,val,len)
    len = 0
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:6 in procedure p()
variable len has not been assigned a value
[etc]

name:opMove01
source:
object a,b=a
a=1

error:
C:\Program Files\Phix\test\t00.exw:1
variable a has not been assigned a value
[etc]

name:opMove02
source:
integer a,b=a
a=1

error:
C:\Program Files\Phix\test\t00.exw:1
variable a has not been assigned a value
[etc]

name:opMove03
source:
object a,b,c
  b=0
  c=a
  a=b

error:
C:\Program Files\Phix\test\t00.exw:3
variable a has not been assigned a value
[etc]

name:opMove04
source:
object c
procedure p()
integer a,b=a
a=1
c=1
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:3 in procedure p()
variable a has not been assigned a value
    a = <no value>
    b = <no value>
... called from C:\Program Files\Phix\test\t00.exw:7
[etc]

name:opMove05
source:
integer c
procedure p()
integer a,b=a
a=1
c=1
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:3 in procedure p()
variable a has not been assigned a value
    a = <no value>
    b = <no value>
... called from C:\Program Files\Phix\test\t00.exw:7
[etc]

name:opMove06
source:
object d
procedure p()
object a,b,c
  b=0
  c=a
  a=b
  d=1
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:5 in procedure p()
variable a has not been assigned a value
    a = <no value>
    b = 0
    c = <no value>
... called from C:\Program Files\Phix\test\t00.exw:9
[etc]

name:opMove07
source:
object d
procedure p()
object a,b,c
  b=0
  c={}
  c=a
  a=b
  d=1
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:6 in procedure p()
variable a has not been assigned a value
    a = <no value>
    b = 0
    c = {}
... called from C:\Program Files\Phix\test\t00.exw:10
[etc]

name:opOpen01
source:
?open({'f',{}},"r")
error:
C:\Program Files (x86)\Phix\test\t00.exw:1
invalid file name

Global & Local Variables
[etc]
name:opOpen02
source:
{} = open("r","fred")
error:
C:\Program Files (x86)\Phix\test\t00.exw:1
invalid open mode

Global & Local Variables
[etc]
name:opOpenDll01
source:
sequence s
procedure p()
    ?open_dll(s)
end procedure
s = "fred"
s[3] = "thing"
p()

error:
C:\Program Files (x86)\Phix\test\t00.exw:3 in procedure p()
argument to open_dll() must be string
... called from C:\Program Files (x86)\Phix\test\t00.exw:7

Global & Local Variables
[etc]
name:opPow001
source:
--Bugfix: commenting out the r_Assignment=routine_id("Assignment") line made
--  opSubse1i in ilxlate() crash with ?9/0 because constant propagation made
--  opPow leave the tmpd (aka tmptransfer) that opRmdr kindly left it, but
--  it no longer actually needed. (22/02/14) Make sure this compiles cleanly
-- and crashes on the =9/0 below, not the ?9/0 in pilx86.e...
sequence symtab = {0}
integer r_Assignment
integer lMask
procedure Assignment(integer tidx)
integer lprev
    lMask = power(2,remainder(tidx,29))
    lprev = symtab[1]
end procedure
--r_Assignment = routine_id("Assignment")
    Assignment(0)
r_Assignment=9/0

error[C]:
C:\Program Files (x86)\Phix\test\t00.exw:16
attempt to divide by 0
[etc]

name:opProfile01
source:
integer a
    profile(a)
    a=1

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:2
variable a has not been assigned a value
Global & Local Variables
 C:\Program Files (x86)\Phix\test\t00.exw:
    a = <no value>

name:opProfile02
source:
integer a
    profile(a)
    a=9/0

error[C]:
C:\Program Files (x86)\Phix\test\t00.exw:3
attempt to divide by 0
[etc]

name:opProfile03
source:
procedure p()
integer a
    profile(a)
    a=1
end procedure
p()

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:3 in procedure p()
variable a has not been assigned a value
    a = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:6
Global & Local Variables

name:opProfile04
source:
procedure p()
integer a
    profile(a)
    a=9/0
end procedure
p()

error[C]:
C:\Program Files\Phix\test\t00.exw:4 in procedure p()
attempt to divide by 0
    a = <no value>
... called from C:\Program Files\Phix\test\t00.exw:6
[etc]

name:opRand01
source:
integer a
    a = rand(a)

error:
C:\Program Files\Phix\test\t00.exw:2
variable a has not been assigned a value
[etc]

name:opRand02
source:
integer b
procedure p()
integer a
    b = rand(a)
    a = 0
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:4 in procedure p()
variable a has not been assigned a value
    a = <no value>
... called from C:\Program Files\Phix\test\t00.exw:7
[etc]

name:opRepe
source:
sequence s={1,{2}}
    s[2][1][3] = 0

error[C]:
C:\Program Files (x86)\Phix\test\t00.exw:2
attempt to subscript an atom
Global & Local Variables
[etc]

name:opRepe2
source:
sequence s={1,{2}}
    s[2][1][3] = 0

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:2
attempt to subscript an atom

Global & Local Variables

 C:\Program Files (x86)\Phix\test\t00.exw:
    s = {1,{2}}

name:opSeq01
source:
object a
function f()
object b
b = 1.4
  return b=a
end function
a = f()

error[C]:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable a has not been assigned a value
    b = 1.4
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
Global & Local Variables
[etc]

name:opSeq02
source:
object a
function f()
object b
b = 1.4
  return b=a
end function
a = f()

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable a has not been assigned a value
    b = 1.4
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
Global & Local Variables
 C:\Program Files (x86)\Phix\test\t00.exw:
    a = <no value>

name:opSetRand01
source:
integer a
  set_rand(a)
  a = 1

error:
C:\Program Files\Phix\test\t00.exw:2
variable a has not been assigned a value
[etc]

name:opSetRand02
source:
integer b
procedure p()
integer a
  set_rand(a)
  a = 1
  b = 1
end procedure
p()

error:
C:\Program Files\Phix\test\t00.exw:4 in procedure p()
variable a has not been assigned a value
    a = <no value>
... called from C:\Program Files\Phix\test\t00.exw:8
[etc]

name:opSlt01
source:
object a
function f()
object b
b = 1.4
  return a<b
end function
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable a has not been assigned a value
    b = 1.4
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
[etc]

name:opSlt02
source:
without warning
object a
function f()
object b
  return a<b
end function
a = 1
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opSubse01
source:
sequence s
procedure p()
    s = s[1][2][3]
end procedure
p()
s = {{1}}

error:
C:\Program Files (x86)\Phix\test\t00.exw:3 in procedure p()
variable s has not been assigned a value
... called from C:\Program Files (x86)\Phix\test\t00.exw:5

Global & Local Variables
[etc]

name:opSubse02
source:
sequence actionsave = {}
integer currfile = 1
    if actionsave[currfile]>=0 then currfile+=1 end if

error:
C:\Program Files (x86)\Phix\test\t00.exw:3
index 1 out of bounds, reading sequence length 0

Global & Local Variables
[etc]

name:opSubse1i01
source:
integer z
procedure dit()
integer address
sequence Names
    Names = {"text",1}
    address = Names[1]
    z=address
end procedure
dit()

error:
C:\Program Files (x86)\Phix\test\t00.exw:6 in procedure dit()
type check failure, address is "text"
    address = "text"
    Names = {"text",1}
... called from C:\Program Files (x86)\Phix\test\t00.exw:9
[etc]

name:opSubssse09
source:
string text = "<a href=\"thing.html\">"
integer tagstart = match("href=\"",text)
integer tagend = find('\"',text)
string repname = text[tagstart+6..tagend-1]

error:
C:\Program Files (x86)\Phix\test\t00.exw:4
slice length is negative [10..8]
[etc]

name:opTrace01
source:
integer a
    trace(a)
    a=1

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:2
variable a has not been assigned a value
Global & Local Variables
 C:\Program Files (x86)\Phix\test\t00.exw:
    a = <no value>

name:opTrace02
source:
procedure p()
integer a
    trace(a)
    a=1
end procedure
p()

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:3 in procedure p()
variable a has not been assigned a value
    a = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:6
Global & Local Variables

name:opUnassigned01
source:
-- opUnassigned check
integer idx
function index(sequence s)
    return s[idx]
end function
idx = index("123")

error:
C:\Program Files\Phix\test\t00.exw:4 in function index()
variable idx has not been assigned a value
    s = "123"
... called from C:\Program Files\Phix\test\t00.exw:6
[etc]

name:opUnassigned02
source:
-- opUnassigned check
integer res
function index(sequence s, integer idx)
integer i
    if idx=2 then
       i = idx
    end if      
    return s[i]
end function
res = index("123",3)
res = index("1234",0)

error:
C:\Program Files\Phix\test\t00.exw:8 in function index()
variable i has not been assigned a value
    s = "123"
    idx = 3
    i = <no value>
... called from C:\Program Files\Phix\test\t00.exw:10
[etc]

name:opXor01
source:
object a
function f()
object b
b = 1
    return a xor b
end function
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable a has not been assigned a value
    b = 1
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
[etc]

name:opXor02
source:
without warning
object a
function f()
object b
    return a xor b
end function
a = 1
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:opXor03
source:
object a
function f()
object b
b = 1
    return b xor a
end function
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable a has not been assigned a value
    b = 1
... called from C:\Program Files (x86)\Phix\test\t00.exw:7
[etc]

name:opXor04
source:
without warning
object a
function f()
object b        
    return b xor a
end function
a = 1
a = f()

error:
C:\Program Files (x86)\Phix\test\t00.exw:5 in function f()
variable b has not been assigned a value
    b = <no value>
... called from C:\Program Files (x86)\Phix\test\t00.exw:8
[etc]

name:switch01c
source:
constant min = 1 
constant max = 1 
 
integer test = min 
 
switch test do 
        case min then 
                printf(1,"Min = %d",min) 
        case max then 
                printf(1,"Max = %d",max) 
end switch 

error[C]:
C:\Program Files (x86)\Phix\test\t00.exw:9
        case max then 
^ duplicate case value [1, il offset:18]

name:switch01i
source:
constant min = 1 
constant max = 1 
 
integer test = min 
 
switch test do 
    case min then 
        printf(1,"Min = %d",min) 
    case max then 
        printf(1,"Max = %d",max) 
end switch 
 

error[I]:
C:\Program Files (x86)\Phix\test\t00.exw:9
    case max then 
^ duplicate case value [1, il offset:18]

name:tcf01
source:
function F(integer o) return o end function
constant s = {1,{2}}
{} = F(s[2])

error:
C:\Program Files (x86)\Phix\test\t00.exw:1 in function F()
type check failure, o is {2}
    o = {2}
... called from C:\Program Files (x86)\Phix\test\t00.exw:3
[etc]

